# Projeto_Life_Code

./: .clang-format  .gitignore  CMakeLists.txt
.config/: glife.ini
lib/: common.h
src/: CMakeLists.txt  README.md  life.cpp  life.h  main.cpp
